# Optix-Project

./: .gitignore  CMakeLists.txt
Header Files/: CUDABuffer.h  LuanchParams.h  SampleRenderer.h  optix7.h
Source Files/: SampleRenderer.cpp  devicePrograms.cu  main.cpp
